force-app/main/default/objects/Product2/fields/Accesorios_cascos__c.field-meta.xml
<CustomField>
    <fullName>Accesorios_cascos__c</fullName>
    <label>Accesorios - cascos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>