force-app/main/default/objects/Product2/fields/Alerta_de_colisi_n_frontal__c.field-meta.xml
<CustomField>
    <fullName>Alerta_de_colisi_n_frontal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alerta de colisión frontal</label>
    <type>Checkbox</type>
</CustomField>