force-app/main/default/objects/Product2/fields/Ano_modelo__c.field-meta.xml
<CustomField>
    <fullName>Ano_modelo__c</fullName>
    <label>Año modelo</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>