force-app/main/default/objects/Product2/fields/Ano_modelo_usado__c.field-meta.xml
<CustomField>
    <fullName>Ano_modelo_usado__c</fullName>
    <label>Año modelo usado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>