force-app/main/default/objects/Product2/fields/Arranque__c.field-meta.xml
<CustomField>
    <fullName>Arranque__c</fullName>
    <label>Arranque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>