force-app/main/default/objects/Product2/fields/Beneficios2__c.field-meta.xml
<CustomField>
    <fullName>Beneficios2__c</fullName>
    <label>Beneficios2</label>
    <type>TextArea</type>
</CustomField>