force-app/main/default/objects/Product2/fields/Beneficios3__c.field-meta.xml
<CustomField>
    <fullName>Beneficios3__c</fullName>
    <label>Beneficios3</label>
    <type>TextArea</type>
</CustomField>