force-app/main/default/objects/Product2/fields/Beneficios4__c.field-meta.xml
<CustomField>
    <fullName>Beneficios4__c</fullName>
    <label>Beneficios4</label>
    <type>TextArea</type>
</CustomField>