force-app/main/default/objects/Product2/fields/Caja__c.field-meta.xml
<CustomField>
    <fullName>Caja__c</fullName>
    <label>Caja</label>
    <length>50</length>
    <type>Text</type>
</CustomField>