force-app/main/default/objects/Product2/fields/Carrocera__c.field-meta.xml
<CustomField>
    <fullName>Carrocera__c</fullName>
    <label>Carrocería</label>
    <length>255</length>
    <type>Text</type>
</CustomField>