force-app/main/default/objects/Product2/fields/Certificacion__c.field-meta.xml
<CustomField>
    <fullName>Certificacion__c</fullName>
    <label>Certificación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>