force-app/main/default/objects/Product2/fields/Cilindraje__c.field-meta.xml
<CustomField>
    <fullName>Cilindraje__c</fullName>
    <label>Cilindraje</label>
    <length>255</length>
    <type>Text</type>
</CustomField>