force-app/main/default/objects/Product2/fields/Ciudad_de_la_placa__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_de_la_placa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ciudad de la placa</label>
    <referenceTo>AM_Municipio__c</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Productos1</relationshipName>
    <type>Lookup</type>
</CustomField>