force-app/main/default/objects/Product2/fields/Clase_de_Vehiculo__c.field-meta.xml
<CustomField>
    <fullName>Clase_de_Vehiculo__c</fullName>
    <label>Clase de Vehiculo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>