force-app/main/default/objects/Product2/fields/Cod_material__c.field-meta.xml
<CustomField>
    <fullName>Cod_material__c</fullName>
    <label>Cod material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>