force-app/main/default/objects/Product2/fields/Codigo_de_producto__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_producto__c</fullName>
    <description>Id externo que se sincroniza con UNOEE.</description>
    <externalId>true</externalId>
    <label>Código de producto</label>
    <length>5</length>
    <type>Text</type>
</CustomField>