force-app/main/default/objects/Product2/fields/Color_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Color_Comercial__c</fullName>
    <label>Color Comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>