force-app/main/default/objects/Product2/fields/Control_Electr_de_Estabilidad__c.field-meta.xml
<CustomField>
    <fullName>Control_Electr_de_Estabilidad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Control Electr. de Estabilidad</label>
    <type>Checkbox</type>
</CustomField>