force-app/main/default/objects/Product2/fields/Descripcin_abreviada__c.field-meta.xml
<CustomField>
    <fullName>Descripcin_abreviada__c</fullName>
    <label>Descripción abreviada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>