force-app/main/default/objects/Product2/fields/Descripcion_del_item__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_del_item__c</fullName>
    <label>Descripción del ítem</label>
    <type>TextArea</type>
</CustomField>