force-app/main/default/objects/Product2/fields/Dimensiones__c.field-meta.xml
<CustomField>
    <fullName>Dimensiones__c</fullName>
    <label>Dimensiones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>