force-app/main/default/objects/Product2/fields/Especificaciones__c.field-meta.xml
<CustomField>
    <fullName>Especificaciones__c</fullName>
    <label>Especificaciones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>