force-app/main/default/objects/Product2/fields/EsUnVehIculoConsignadoRetirado__c.field-meta.xml
<CustomField>
    <fullName>EsUnVehIculoConsignadoRetirado__c</fullName>
    <formula>IF(AND(  ISPICKVAL(Inventario_de_Usados__r.Estado_Del_Vehiculo__c ,  &apos;CONSIG. RETIRADO&apos; ), RecordType.Name == &apos;Autos&apos;  ) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>¿Es un vehículo  consignado retirado?</label>
    <type>Checkbox</type>
</CustomField>