force-app/main/default/objects/Product2/fields/Extension_color__c.field-meta.xml
<CustomField>
    <fullName>Extension_color__c</fullName>
    <label>Extensión color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>