force-app/main/default/objects/Product2/fields/Fasecolda__c.field-meta.xml
<CustomField>
    <fullName>Fasecolda__c</fullName>
    <label>Fasecolda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>