force-app/main/default/objects/Product2/fields/Fecha_Compra__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Compra__c</fullName>
    <label>Fecha Compra</label>
    <type>Date</type>
</CustomField>