force-app/main/default/objects/Product2/fields/Frenado_autom_tico_de_emergencia__c.field-meta.xml
<CustomField>
    <fullName>Frenado_autom_tico_de_emergencia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Frenado automático de emergencia</label>
    <type>Checkbox</type>
</CustomField>