force-app/main/default/objects/Product2/fields/IdProducto__c.field-meta.xml
<CustomField>
    <fullName>IdProducto__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IdProducto</label>
    <type>Text</type>
</CustomField>