force-app/main/default/objects/Product2/fields/IdProductoUNOEE__c.field-meta.xml
<CustomField>
    <fullName>IdProductoUNOEE__c</fullName>
    <externalId>true</externalId>
    <label>IdProductoUNOEE</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>