force-app/main/default/objects/Product2/fields/Inventario_de_Usados__c.field-meta.xml
<CustomField>
    <fullName>Inventario_de_Usados__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventario de Usados</label>
    <referenceTo>Inventario_de_Usados__c</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>