force-app/main/default/objects/Product2/fields/Kilometraje__c.field-meta.xml
<CustomField>
    <fullName>Kilometraje__c</fullName>
    <label>Kilometraje</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>