force-app/main/default/objects/Product2/fields/La_motocicleta_se_entregan_con__c.field-meta.xml
<CustomField>
    <fullName>La_motocicleta_se_entregan_con__c</fullName>
    <label>La motocicleta se entregan con:</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>