force-app/main/default/objects/Product2/fields/Linea_version__c.field-meta.xml
<CustomField>
    <fullName>Linea_version__c</fullName>
    <label>Línea versión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>