force-app/main/default/objects/Product2/fields/Manufactura_origen__c.field-meta.xml
<CustomField>
    <fullName>Manufactura_origen__c</fullName>
    <label>Manufactura origen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>