force-app/main/default/objects/Product2/fields/Modelo_Ao__c.field-meta.xml
<CustomField>
    <fullName>Modelo_Ao__c</fullName>
    <label>Modelo Año</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>