force-app/main/default/objects/Product2/fields/Nmero_de_Puertas__c.field-meta.xml
<CustomField>
    <fullName>Nmero_de_Puertas__c</fullName>
    <label>Número de Puertas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>