force-app/main/default/objects/Product2/fields/No_Pasajeros__c.field-meta.xml
<CustomField>
    <fullName>No_Pasajeros__c</fullName>
    <label>Número Pasajeros</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>