force-app/main/default/objects/Product2/fields/Nombre_alterno__c.field-meta.xml
<CustomField>
    <fullName>Nombre_alterno__c</fullName>
    <label>Nombre alterno</label>
    <length>255</length>
    <type>Text</type>
</CustomField>