force-app/main/default/objects/Product2/fields/Numero_de_bolsas_de_aire__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_bolsas_de_aire__c</fullName>
    <label>Numero de bolsas de aire</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>