force-app/main/default/objects/Product2/fields/Numero_de_Chasis__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Chasis__c</fullName>
    <label>Numero de Chasis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>