force-app/main/default/objects/Product2/fields/Numero_de_Motor__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Motor__c</fullName>
    <label>Numero de Motor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>