force-app/main/default/objects/Product2/fields/Numero_VIN__c.field-meta.xml
<CustomField>
    <fullName>Numero_VIN__c</fullName>
    <label>Número VIN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>