force-app/main/default/objects/Product2/fields/Peso_en_seco__c.field-meta.xml
<CustomField>
    <fullName>Peso_en_seco__c</fullName>
    <label>Peso en seco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>