force-app/main/default/objects/Product2/fields/Placa__c.field-meta.xml
<CustomField>
    <fullName>Placa__c</fullName>
    <label>Placa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>