force-app/main/default/objects/Product2/fields/Plazo_de_financiacin__c.field-meta.xml
<CustomField>
    <fullName>Plazo_de_financiacin__c</fullName>
    <label>Plazo de financiación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>