force-app/main/default/objects/Product2/fields/Potencia_max__c.field-meta.xml
<CustomField>
    <fullName>Potencia_max__c</fullName>
    <label>Potencia max</label>
    <length>255</length>
    <type>Text</type>
</CustomField>