force-app/main/default/objects/Product2/fields/ProductCodeRT__c.field-meta.xml
<CustomField>
    <fullName>ProductCodeRT__c</fullName>
    <description>Record Type Name + Product Code, este valor se usa para que sea único y evitar duplicados</description>
    <label>ProductCodeRT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>