force-app/main/default/objects/Product2/fields/Referencia_comercial__c.field-meta.xml
<CustomField>
    <fullName>Referencia_comercial__c</fullName>
    <label>Referencia Comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>