force-app/main/default/objects/Product2/fields/Sistema_Antibloqueo_Frenos__c.field-meta.xml
<CustomField>
    <fullName>Sistema_Antibloqueo_Frenos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sistema Antibloqueo Frenos</label>
    <type>Checkbox</type>
</CustomField>