force-app/main/default/objects/Product2/fields/Sistema_de_bolsa_de_aire__c.field-meta.xml
<CustomField>
    <fullName>Sistema_de_bolsa_de_aire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sistema de bolsa de aire</label>
    <type>Checkbox</type>
</CustomField>