force-app/main/default/objects/Product2/fields/Sistema_de_sujecion_infantil__c.field-meta.xml
<CustomField>
    <fullName>Sistema_de_sujecion_infantil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sistema de sujecion infantil</label>
    <type>Checkbox</type>
</CustomField>