force-app/main/default/objects/Product2/fields/SO_Garantia_motocicleta__c.field-meta.xml
<CustomField>
    <fullName>SO_Garantia_motocicleta__c</fullName>
    <label>Garantia motocicleta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garantia1</fullName>
            </value>
            <value>
                <fullName>Garantia2</fullName>
            </value>
            <value>
                <fullName>Garantia3</fullName>
            </value>
            <value>
                <fullName>Garantia4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>