force-app/main/default/objects/Product2/fields/Subfamilia__c.field-meta.xml
<CustomField>
    <fullName>Subfamilia__c</fullName>
    <label>Subfamilia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>