force-app/main/default/objects/Product2/fields/Tipo_de_auto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_auto__c</fullName>
    <label>Tipo de auto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>