force-app/main/default/objects/Product2/fields/Tipo_de_combustible__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_combustible__c</fullName>
    <label>Tipo de combustible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>