force-app/main/default/objects/Product2/fields/Tipo_de_servicio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_servicio__c</fullName>
    <label>Tipo de servicio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>