force-app/main/default/objects/Product2/fields/Tipo_Producto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Producto__c</fullName>
    <label>Tipo Producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Usados</fullName>
            </value>
            <value>
                <fullName>Nuevos / Renting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>