force-app/main/default/objects/Product2/fields/Traccin__c.field-meta.xml
<CustomField>
    <fullName>Traccin__c</fullName>
    <label>Tracción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>