force-app/main/default/objects/Product2/fields/Transmision__c.field-meta.xml
<CustomField>
    <fullName>Transmision__c</fullName>
    <label>Transmisión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>