force-app/main/default/objects/Product2/fields/Valor_Matrcula__c.field-meta.xml
<CustomField>
    <fullName>Valor_Matrcula__c</fullName>
    <label>Valor Matrícula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>