force-app/main/default/objects/Product2/fields/Valor_Seguro_todo_riesgo__c.field-meta.xml
<CustomField>
    <fullName>Valor_Seguro_todo_riesgo__c</fullName>
    <label>Valor Seguro todo riesgo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>