force-app/main/default/objects/Product2/fields/Valor_SOAT__c.field-meta.xml
<CustomField>
    <fullName>Valor_SOAT__c</fullName>
    <label>Valor SOAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>