force-app/main/default/objects/Product2/recordTypes/Motos.recordType-meta.xml
<RecordType>
    <fullName>Motos</fullName>
    <active>true</active>
    <label>Motos</label>
</RecordType>