force-app/main/default/objects/Product2/listViews/Productos_Motos.listView-meta.xml
<ListView>
    <fullName>Productos_Motos</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Motos</value>
    </filters>
    <filters>
        <field>EsUnVehIculoConsignadoRetirado__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Productos Motos</label>
</ListView>